# django-chatgpt

./: .gitpod.yml  .pre-commit-config.yaml  .prettierignore  README.md  explore.ipynb  index.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
config/: settings.py  urls.py
django_chatgpt/api/: apps.py  urls.py  views.py
django_chatgpt/core/: apps.py
django_chatgpt/core/management/commands/: makesuperuser.py
django_chatgpt/static/css/: output.css
django_chatgpt/templates/: base.html  home.html
django_chatgpt/users/: apps.py
django_chatgpt/utils/: create_index.py
docker/: entrypoint.sh
utils/: create_index.py
